Use RAM disks in CircleCI
fix mbx-ci call

Revert mbx-ci paths

Attach workspace at ~/ for jobs that depends on mbx-ci

Add separate script test-bundle-size

install-mbx-ci attach_workspace at: ~/

Persist HOME to workspace in install-mbx-ci

Use HOME as working_directory for install-mbx-ci

Use ~/mapbox-gl-js as working_directory in check-bundle-size

Persist .ssh on prepare job

Use relative paths in prepare persist_to_workspace

Override test defaults to run in ramdisk

Use ramdisk for build job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -159,6 +159,16 @@ defaults: &defaults
     - image: cimg/node:14.16-browsers
   working_directory: ~/mapbox-gl-js
 
+use_ramdisk: &use_ramdisk
+  working_directory: /mnt/ramdisk/mapbox-gl-js
+
+attach_workspace_at_ramdisk: &attach_workspace_at_ramdisk
+  attach_workspace:
+    at: /mnt/ramdisk/
+
+persist_from_ramdisk: &persist_from_ramdisk
+  root: /mnt/ramdisk/
+
 jobs:
   prepare:
     <<: *defaults
@@ -178,8 +188,8 @@ jobs:
       - persist_to_workspace:
           root: ~/
           paths:
-            - mapbox-gl-js
             - .ssh
+            - mapbox-gl-js
 
   install-mbx-ci:
     <<: *defaults
@@ -199,10 +209,10 @@ jobs:
             - mbx-ci
 
   lint:
+    <<: *use_ramdisk
     <<: *defaults
     steps:
-      - attach_workspace:
-          at: ~/
+      - <<: *attach_workspace_at_ramdisk
       - restore_cache:
           keys:
             - v2-lint-{{ .Branch }}
@@ -215,10 +225,10 @@ jobs:
             - '.eslintcache'
 
   build:
+    <<: *use_ramdisk
     <<: *defaults
     steps:
-      - attach_workspace:
-          at: ~/
+      - <<: *attach_workspace_at_ramdisk
       - run: yarn run build-prod-min
       - run: yarn run build-prod
       - run: yarn run build-csp
@@ -232,7 +242,7 @@ jobs:
       - store_artifacts:
           path: "test/release"
       - persist_to_workspace:
-          root: ~/
+          root: /mnt/ramdisk/
           paths:
             - mapbox-gl-js/dist
 
@@ -241,30 +251,27 @@ jobs:
     steps:
       - attach_workspace:
           at: ~/
-      - run:
-          name: Check bundle size
-          command: |
-            node build/check-bundle-size.js
+      - run: yarn run test-bundle-size
 
   test-flow:
+    <<: *use_ramdisk
     <<: *defaults
     steps:
-      - attach_workspace:
-          at: ~/
+      - <<: *attach_workspace_at_ramdisk
       - run: yarn run test-flow
 
   test-unit:
+    <<: *use_ramdisk
     <<: *defaults
     steps:
-      - attach_workspace:
-          at: ~/
+      - <<: *attach_workspace_at_ramdisk
       - run: yarn run test-unit
 
   test-render-linux-chrome-dev:
+    <<: *use_ramdisk
     <<: *defaults
     steps:
-      - attach_workspace:
-          at: ~/
+      - <<: *attach_workspace_at_ramdisk
       - browser-tools/install-chrome
       # - run: yarn run test-render
       - run:
@@ -277,6 +284,7 @@ jobs:
           path: "test/integration/render-tests/index.html"
 
   test-render-linux-firefox-dev:
+    <<: *use_ramdisk
     <<: *defaults
     steps:
       - attach_workspace:
@@ -290,10 +298,10 @@ jobs:
 
 
   test-render-linux-chrome-prod:
+    <<: *use_ramdisk
     <<: *defaults
     steps:
-      - attach_workspace:
-          at: ~/
+      - <<: *attach_workspace_at_ramdisk
       - browser-tools/install-chrome
       - run: yarn run test-render-prod
       - store_test_results:
@@ -302,10 +310,10 @@ jobs:
           path: "test/integration/render-tests/index.html"
 
   test-render-linux-chrome-csp:
+    <<: *use_ramdisk
     <<: *defaults
     steps:
-      - attach_workspace:
-          at: ~/
+      - <<: *attach_workspace_at_ramdisk
       - browser-tools/install-chrome
       - run: yarn run test-render-csp
       - store_test_results:
@@ -314,10 +322,10 @@ jobs:
           path: "test/integration/render-tests/index.html"
 
   test-query:
+    <<: *use_ramdisk
     <<: *defaults
     steps:
-      - attach_workspace:
-          at: ~/
+      - <<: *attach_workspace_at_ramdisk
       - browser-tools/install-chrome
       - run: yarn run test-query
       - store_test_results:
@@ -326,10 +334,10 @@ jobs:
           path: "test/integration/query-tests/index.html"
 
   test-webpack:
+    <<: *use_ramdisk
     <<: *defaults
     steps:
-      - attach_workspace:
-          at: ~/
+      - <<: *attach_workspace_at_ramdisk
       - run:
           name: Build Webpack
           command: |
@@ -341,10 +349,10 @@ jobs:
           path: "test/build/transpilation"
 
   test-style-spec:
+    <<: *use_ramdisk
     <<: *defaults
     steps:
-      - attach_workspace:
-          at: ~/
+      - <<: *attach_workspace_at_ramdisk
       - run: yarn run test-style-spec
 
   collect-stats:
@@ -362,10 +370,10 @@ jobs:
           command: aws s3 cp data.json.gz s3://mapbox-loading-dock/raw/gl_js.perf_metrics_staging/ci/`git show -s --date=short --format=%cd-%h HEAD`.json.gz
 
   test-browser:
+    <<: *use_ramdisk
     <<: *defaults
     steps:
-      - attach_workspace:
-          at: ~/
+      - <<: *attach_workspace_at_ramdisk
       - browser-tools/install-browser-tools:
           chrome-version: 91.0.4472.164
       - run: yarn run build-token
@@ -383,10 +391,10 @@ jobs:
           command: yarn run test-browser
 
   test-expressions:
+    <<: *use_ramdisk
     <<: *defaults
     steps:
-      - attach_workspace:
-          at: ~/
+      - <<: *attach_workspace_at_ramdisk
       - run: yarn run test-expressions
 
   deploy-benchmarks:
