--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -174,6 +174,13 @@ defaults: &defaults
     - image: cimg/node:14.16-browsers
   working_directory: ~/mapbox-gl-js
 
+use_ramdisk: &use_ramdisk
+  working_directory: /mnt/ramdisk/mapbox-gl-js
+
+attach_workspace_at_ramdisk: &attach_workspace_at_ramdisk
+  attach_workspace:
+    at: /mnt/ramdisk/
+
 jobs:
   prepare:
     <<: *defaults
@@ -212,10 +219,10 @@ jobs:
             - mbx-ci
 
   lint:
+    <<: *use_ramdisk
     <<: *defaults
     steps:
-      - attach_workspace:
-          at: ~/
+      - <<: *attach_workspace_at_ramdisk
       - restore_cache:
           keys:
             - v2-lint-{{ .Branch }}
@@ -228,10 +235,10 @@ jobs:
             - '.eslintcache'
 
   build:
+    <<: *use_ramdisk
     <<: *defaults
     steps:
-      - attach_workspace:
-          at: ~/
+      - <<: *attach_workspace_at_ramdisk
       - run: yarn run build-prod-min
       - run: yarn run build-prod
       - run: yarn run build-csp
@@ -246,7 +253,7 @@ jobs:
       - store_artifacts:
           path: "test/release"
       - persist_to_workspace:
-          root: ~/
+          root: /mnt/ramdisk/
           paths:
             - mapbox-gl-js/dist
 
@@ -261,24 +268,24 @@ jobs:
             node build/check-bundle-size.js
 
   test-flow:
+    <<: *use_ramdisk
     <<: *defaults
     steps:
-      - attach_workspace:
-          at: ~/
+      - <<: *attach_workspace_at_ramdisk
       - run: yarn run test-flow
 
   test-unit:
+    <<: *use_ramdisk
     <<: *defaults
     steps:
-      - attach_workspace:
-          at: ~/
+      - <<: *attach_workspace_at_ramdisk
       - run: yarn run test-unit
 
   test-render-linux-chrome-dev:
+    <<: *use_ramdisk
     <<: *defaults
     steps:
-      - attach_workspace:
-          at: ~/
+      - <<: *attach_workspace_at_ramdisk
       - browser-tools/install-chrome
       - run: yarn run test-render
       - store_test_results:
@@ -287,10 +294,10 @@ jobs:
           path: "test/integration/render-tests/index.html"
 
   test-render-linux-firefox-dev:
+    <<: *use_ramdisk
     <<: *defaults
     steps:
-      - attach_workspace:
-          at: ~/
+      - <<: *attach_workspace_at_ramdisk
       - browser-tools/install-firefox
       - run: yarn run test-render-firefox
       - store_test_results:
@@ -300,10 +307,10 @@ jobs:
 
 
   test-render-linux-chrome-prod:
+    <<: *use_ramdisk
     <<: *defaults
     steps:
-      - attach_workspace:
-          at: ~/
+      - <<: *attach_workspace_at_ramdisk
       - browser-tools/install-chrome
       - run: yarn run test-render-prod
       - store_test_results:
@@ -312,10 +319,10 @@ jobs:
           path: "test/integration/render-tests/index.html"
 
   test-render-linux-chrome-csp:
+    <<: *use_ramdisk
     <<: *defaults
     steps:
-      - attach_workspace:
-          at: ~/
+      - <<: *attach_workspace_at_ramdisk
       - browser-tools/install-chrome
       - run: yarn run test-render-csp
       - store_test_results:
@@ -324,10 +331,10 @@ jobs:
           path: "test/integration/render-tests/index.html"
 
   test-query:
+    <<: *use_ramdisk
     <<: *defaults
     steps:
-      - attach_workspace:
-          at: ~/
+      - <<: *attach_workspace_at_ramdisk
       - browser-tools/install-chrome
       - run: yarn run test-query
       - store_test_results:
@@ -336,10 +343,10 @@ jobs:
           path: "test/integration/query-tests/index.html"
 
   test-webpack:
+    <<: *use_ramdisk
     <<: *defaults
     steps:
-      - attach_workspace:
-          at: ~/
+      - <<: *attach_workspace_at_ramdisk
       - run:
           name: Build Webpack
           command: |
@@ -351,10 +358,10 @@ jobs:
           path: "test/build/transpilation"
 
   test-style-spec:
+    <<: *use_ramdisk
     <<: *defaults
     steps:
-      - attach_workspace:
-          at: ~/
+      - <<: *attach_workspace_at_ramdisk
       - run: yarn run test-style-spec
 
   collect-stats:
@@ -372,12 +379,11 @@ jobs:
           command: aws s3 cp data.json.gz s3://mapbox-loading-dock/raw/gl_js.perf_metrics_staging/ci/`git show -s --date=short --format=%cd-%h HEAD`.json.gz
 
   test-browser:
+    <<: *use_ramdisk
     <<: *defaults
     steps:
-      - attach_workspace:
-          at: ~/
-      - browser-tools/install-browser-tools:
-          chrome-version: 91.0.4472.164
+      - <<: *attach_workspace_at_ramdisk
+      - browser-tools/install-chrome
       - run: yarn run build-dev
       - run: yarn run build-token
       - run:
@@ -394,10 +400,10 @@ jobs:
           command: yarn run test-browser
 
   test-expressions:
+    <<: *use_ramdisk
     <<: *defaults
     steps:
-      - attach_workspace:
-          at: ~/
+      - <<: *attach_workspace_at_ramdisk
       - run: yarn run test-expressions
 
   deploy-benchmarks:
@@ -473,7 +479,7 @@ jobs:
             $uri = "https://dl.google.com/chrome/install/latest/chrome_installer.exe";
             $path = "$PSScriptRoot\ChromeSetup.exe";
             Invoke-WebRequest -Uri $uri -OutFile $path;
-            Start-Process $path /install -NoNewWindow -Wait; 
+            Start-Process $path /install -NoNewWindow -Wait;
             Remove-Item $path;
 
             $chromeInstalled = (Get-Item (Get-ItemProperty 'HKLM:\SOFTWARE\Microsoft\Windows\CurrentVersion\App Paths\chrome.exe').'(Default)').VersionInfo;
