--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -447,15 +447,15 @@ jobs:
           at: ~/
       - restore_cache:
           keys:
-            - v0-test-mac-yarn-{{ .Branch }}-{{ checksum "yarn.lock" }}
-            - v0-test-mac-yarn-{{ .Branch }}-
-            - v0-test-mac-yarn-
+            - v1-test-mac-yarn-{{ .Branch }}-{{ checksum "yarn.lock" }}
+            - v1-test-mac-yarn-{{ .Branch }}-
+            - v1-test-mac-yarn-
       - browser-tools/install-chrome
       - run: yarn --frozen-lockfile --cache-folder ~/.cache/yarn
       - save_cache:
-          key: v0-test-mac-yarn-{{ .Branch }}-{{ checksum "yarn.lock" }}
+          key: v1-test-mac-yarn-{{ .Branch }}-{{ checksum "yarn.lock" }}
           paths:
-           - /home/circleci/.cache/yarn
+           - ~/.cache/yarn
       - run: yarn run test-render
       - store_test_results:
           path: test/integration/render-tests
