--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -469,11 +469,6 @@ jobs:
     working_directory: ~/mapbox-gl-js
     steps:
       - checkout
-      - restore_cache:
-          keys:
-            - v0-windows-yarn-{{ .Branch }}-{{ checksum "yarn.lock" }}
-            - v0-windows-yarn-{{ .Branch }}-
-            - v0-windows-yarn-
       - attach_workspace:
           at: ~/
       # The browser-tools orb doesn't work on Windows, so we install chrome manually.
@@ -490,11 +485,7 @@ jobs:
             if ($chromeInstalled.FileName -eq $null) {
               Write-Host "Chrome failed to install";
             }
-      - run: yarn --frozen-lockfile --cache-folder /home/circleci/.cache/yarn
-      - save_cache:
-          key: v0-windows-yarn-{{ .Branch }}-{{ checksum "yarn.lock" }}
-          paths:
-           - /home/circleci/.cache/yarn
+      - run: yarn --frozen-lockfile
       - run: yarn run test-render
       - store_test_results:
           path: test/integration/render-tests
