--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -461,6 +461,7 @@ jobs:
           name: Running tests in parallel
           command: |
             TESTFILES=$(circleci tests glob "test/integration/render-tests/**.json" | circleci tests split)
+            echo circleci tests glob "test/integration/render-tests/**.json"
             echo ${TESTFILES}
             yarn run test-render $TESTFILES
       - store_test_results:
@@ -497,8 +498,9 @@ jobs:
           name: Running tests in parallel
           command: |
             set TESTFILES=(circleci tests glob "test/integration/render-tests/**.json" | circleci tests split)
+            echo circleci tests glob "test/integration/render-tests/**.json"
             echo %TESTFILES% 
-            yarn run test-render $TESTFILES
+            yarn run test-render %TESTFILES%
       - store_test_results:
           path: test/integration/render-tests
       - store_artifacts:
