Attempt to change windows variable syntax to powershell

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -505,10 +505,10 @@ jobs:
       - run:
           name: Running tests in parallel
           command: |
-            set TESTFILES=(circleci tests glob "test/integration/render-tests/**/*.json" | circleci tests split)
+            $TESTFILES=(circleci tests glob "test/integration/render-tests/**/*.json" | circleci tests split)
             circleci tests glob "test/integration/render-tests/**/*.json"
-            echo %TESTFILES% 
-            yarn run test-render %TESTFILES%
+            echo $TESTFILES 
+            yarn run test-render $TESTFILES
       - store_test_results:
           path: test/integration/render-tests
       - store_artifacts:
