Try pipe in windows to solve command line too long error

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -508,7 +508,7 @@ jobs:
             $TESTFILES=(circleci tests glob "test/integration/render-tests/**/*.json" | circleci tests split)
             circleci tests glob "test/integration/render-tests/**/*.json"
             echo $TESTFILES 
-            yarn run test-render $TESTFILES
+            $TESTFILES | yarn run test-render
       - store_test_results:
           path: test/integration/render-tests
       - store_artifacts:
