--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -504,11 +504,10 @@ jobs:
       - run: yarn --frozen-lockfile
       - run:
           name: Running tests in parallel
+          # Windows powershell has a limit to character count, therefore we write to a file which we read in testem.js
           command: |
-            $TESTFILES=(circleci tests glob "test/integration/render-tests/**/*.json" | circleci tests split)
-            circleci tests glob "test/integration/render-tests/**/*.json"
-            echo $TESTFILES 
-            $TESTFILES | yarn run test-render
+            circleci tests glob "test/integration/render-tests/**/*.json" | circleci tests split | Out-File - FilePath tests-to-run.txt
+            yarn run test-render
       - store_test_results:
           path: test/integration/render-tests
       - store_artifacts:
