--- a/package.json
+++ b/package.json
@@ -88,9 +88,9 @@
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-unassert": "^0.5.0",
     "selenium-webdriver": "^4.4.0",
+    "serve-static": "^1.15.0",
     "shuffle-seed": "^1.1.6",
     "sinon": "^15.0.0",
-    "st": "^3.0.0",
     "stylelint": "^14.11.0",
     "stylelint-config-standard": "^29.0.0",
     "tap": "~16.3.2",
