--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "eslint-plugin-html": "^7.1.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsdoc": "^39.6.4",
+    "finalhandler": "^1.2.0",
     "flow-bin": "0.145.0",
     "gl": "6.0.1",
     "glob": "^8.0.3",
@@ -91,6 +92,7 @@
     "serve-static": "^1.15.0",
     "shuffle-seed": "^1.1.6",
     "sinon": "^15.0.0",
+    "st": "^3.0.0",
     "stylelint": "^14.11.0",
     "stylelint-config-standard": "^29.0.0",
     "tap": "~16.3.2",
