extend win prepare cleanup list

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -494,7 +494,10 @@ jobs:
             Remove-Item node_modules/gl -Recurse -Force;
             Remove-Item node_modules/@mapbox/mvt-fixtures/real-world/osm-qa-* -Recurse -Force;
             Remove-Item node_modules/react-devtools-core -Recurse -Force;
+            Remove-Item node_modules/@babel -Recurse -Force;
             Remove-Item node_modules/@octokit -Recurse -Force;
+            Remove-Item node_modules/puppeteer-core -Recurse -Force;
+            Remove-Item node_modules/lodash -Recurse -Force;
       - persist_to_workspace:
           root: ~/
           paths:
